feat: dark/light mode

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@
   /* Text colors */
   --color-text-primary: #1f1f22;
   --color-text-secondary: #4d4d4d;
-  --color-text-white: #ffffff;
+  --color-text-white: #dfdfe3;
   --color-text-blue: #0894e2;
   --color-text-orange: #ffb700;
 
