--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,8 @@
   /* Background colors */
   --color-white: #ffffff;
   --color-black: #1f1f22;
-  --color-darker: #1b1b1d;
+  --color-darker: #14182b;
+  --color-darker-light: #1c2237;
   --color-background-light: #f5f5f5;
   --color-background-lighter: #fafafa;
 
