--- a/src/index.css
+++ b/src/index.css
@@ -48,8 +48,10 @@
   --color-white: #ffffff;
   --color-black: #1f1f22;
   --color-darker: #14182b;
-  --color-darker-light: #1c2237;
+  --color-darker-2: #1c2237;
+  /* --color-darker-light: #1c2237; */
   --color-background-light: #f5f5f5;
+  --color-background-light-2: #f6f8ff; 
   --color-background-lighter: #fafafa;
 
   /* Font family */
