--- a/src/index.css
+++ b/src/index.css
@@ -41,14 +41,14 @@
   --text-hero: 2.5rem; /* 40px */
 
   /* Border colors */
-  --color-border: #9d9d9d;
+  --color-border: #48455f;
   --color-border-light: #e5e5e5;
 
   /* Background colors */
   --color-white: #ffffff;
   --color-black: #1f1f22;
-  --color-darker: #14182b;
-  --color-darker-2: #1c2237;
+  --color-darker: #1f1c2d;
+  --color-darker-2: #2f2b41;
   /* --color-darker-light: #1c2237; */
   --color-background-light: #f5f5f5;
   --color-background-light-2: #f6f8ff; 
@@ -244,11 +244,11 @@ body {
   --secondary: oklch(0.82 0.14 80);
   --secondary-foreground: oklch(0.12 0 0);
   --muted: oklch(0.25 0 0);
-  --muted-foreground: oklch(0.708 0 0);
+  --muted-foreground: #cbc6e7;  /* oklch(0.708 0 0); */
   --accent: oklch(0.25 0 0);
   --accent-foreground: oklch(0.985 0 0);
   --destructive: oklch(0.704 0.191 22.216);
-  --border: oklch(1 0 0 / 10%);
+  --border: #48455f;
   --input: oklch(1 0 0 / 15%);
   --ring: oklch(0.7 0.15 230);
   --chart-1: oklch(0.488 0.243 264.376);
